fix horizontal scroll

--- a/styles/normal.css
+++ b/styles/normal.css
@@ -3,6 +3,10 @@
   width: 200vw;
 }
 
+.works__outer {
+  overflow: hidden;
+}
+
 .work {
   height: 100vh;
   width: 100%;
